fixed spacing for events home and events index

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -303,6 +303,7 @@ width: 100%;
   outline: solid;
   outline-width: 1px;
   outline-color: #cdcdcd;
+  margin-left: 11px;
   margin-bottom: 30px;
   height: 490px;
   width: 400px;
